--- a/SDA_2018_Assign2MatthewFader2/app/src/main/AndroidManifest.xml
+++ b/SDA_2018_Assign2MatthewFader2/app/src/main/AndroidManifest.xml
@@ -10,14 +10,33 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.STILL_IMAGE_CAMERA" />
-                <category android:name="android.intent.category.DEFAULT" />"
+                <category android:name="android.intent.category.OPENABLE" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <action android:name="android.intent.action.MAIN" />
+
+                <!-- https://developer.android.com/guide/components/intents-common#CameraStill -->
+                <action android:name="android.intent.action.STILL_IMAGE_CAMERA" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+
+                    <action android:name="android.intent.action.GET_CONTENT" />
+                    <!-- <data android:type="image/*"/> -->
+                    <category android:name="android.intent.category.DEFAULT" />
+                    <!-- The OPENABLE category declares that the returned file is accessible
+                         from a content provider that supports OpenableColumns
+                         and ContentResolver.openFileDescriptor() -->
+                    <category android:name="android.intent.category.OPENABLE" />
 
             </intent-filter>
         </activity>
+        <activity android:name=".Main2Activity">
+        </activity>
+
+
     </application>
 
 </manifest>
